--- a/src/App.scss
+++ b/src/App.scss
@@ -16,14 +16,6 @@ input[type='number'] {
   -moz-appearance: textfield;
 }
 
-.freeze {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: black;
-  opacity: 0.2;
-}
-
 .app {
   position: relative;
   font-family: 'Nerko One', cursive;
@@ -38,9 +30,35 @@ input[type='number'] {
   .main-title {
     font-size: 2rem;
     font-weight: 400;
-    margin: 1.5rem 0 1rem 0;
+    margin: 1.5rem 0;
     font-size: 3rem;
     opacity: 0.9;
+  }
+
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  .score-unit {
+    margin: 0 0 0.5rem 0;
+    font-size: 1.2rem;
+    opacity: 0.8;
+    color: hotpink;
+    text-align: center;
+  }
+
+  .button-restart,
+  .button-start {
+    margin-bottom: 4rem;
+  }
+
+  .button-start {
+    animation: fade-in 1.5s ease-out backwards 1.5s;
   }
 
   &.intro {
@@ -51,58 +69,19 @@ input[type='number'] {
         transform: translateY(-100vh);
       }
       to {
-        transform: translateY(-5rem);
+        transform: translateY(-0);
       }
     }
 
     .main-title {
-      animation: enter-top 1.5s ease-out backwards;
-      position: absolute;
-      transform: translateY(-5rem);
+      animation: enter-top 1.5s ease-out both;
       margin-top: 0;
     }
   }
-}
 
-.score-container {
-  margin-top: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  .score {
-    font-size: 2.5rem;
-    margin: 0;
+  &.over {
+    .score-container {
+      margin-bottom: 2rem;
+    }
   }
-
-  .score-title {
-    margin: 0;
-    font-size: 1rem;
-    opacity: 0.8;
-  }
-
-  .score-unit {
-    margin: 0;
-    font-size: 1rem;
-    opacity: 0.8;
-    color: hotpink;
-  }
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-.button-restart,
-.button-start {
-  margin: 2rem 0;
-}
-
-.button-start {
-  animation: fade-in 1.5s ease-out backwards 1.5s;
 }
