--- a/src/components/Problem/Problem.styles.scss
+++ b/src/components/Problem/Problem.styles.scss
@@ -3,10 +3,11 @@
   font-weight: 400;
   text-align: center;
   border-radius: 0.5rem;
-  padding: 2rem 0;
+  margin: 0 0 2rem 0;
 }
 
 .answer-container {
+  margin: 0 0 1.5rem 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 1.5rem;
