--- a/src/components/Score/Score.styles.scss
+++ b/src/components/Score/Score.styles.scss
@@ -1,5 +1,5 @@
 .score-container {
-  margin-top: 2rem;
+  margin: 0 0 1rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,10 +15,15 @@
     opacity: 0.8;
   }
 
-  .score-unit {
-    margin: 0;
-    font-size: 1rem;
-    opacity: 0.8;
-    color: hotpink;
+  &.large {
+    margin: 0 0 2rem 0;
+
+    .score {
+      font-size: 3.5rem;
+    }
+
+    .score-title {
+      font-size: 1.7rem;
+    }
   }
 }
