--- a/src/components/CustomButton/CustomButton.styles.module.scss
+++ b/src/components/CustomButton/CustomButton.styles.module.scss
@@ -8,9 +8,14 @@
   outline: 0;
   border-radius: 0.5rem;
   text-align: center;
+  user-select: none;
+
+  &:hover:not([disabled]) {
+    background-color: darken(hotpink, 5%);
+  }
 
   &:focus {
     outline: none;
-    border: 4px solid white;
+    box-shadow: 0 0 2px 0.2rem white;
   }
 }
