--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -51,14 +51,14 @@ input[type='number'] {
   }
 
   .button-start {
-    animation: fade-in 1.5s ease-out backwards 1.5s;
+    //animation: fade-in 1.5s ease-out backwards 1.5s;
   }
 
   &.intro {
     justify-content: center;
 
     .main-title {
-      animation: enter-top 1.5s ease-out both;
+      //animation: enter-top 1.5s ease-out both;
       margin-top: 0;
     }
   }
